// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > renders default as expected 1`] = `
<div>
  <span
    class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light"
    role="status"
  >
    Basic tag
  </span>
</div>
`;

exports[`Tag > renders with custom className 1`] = `
<div>
  <span
    class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light custom-class"
    role="status"
  >
    Custom tag
  </span>
</div>
`;
